--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.idea/
+android/android-tech-news-projeto-inicial/.idea/
