Add data biding project

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 android/android-tech-news-projeto-inicial/.idea/
+android/android-databinding/.idea/encodings.xml
+android/android-databinding/.idea/
