Add dummy project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 android/android-tech-news-projeto-inicial/.idea/
 android/android-databinding/.idea/encodings.xml
 android/android-databinding/.idea/
+android/dummy/.idea/
