Add Alura Viagens project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ android/android-tech-news-projeto-inicial/.idea/
 android/android-databinding/.idea/encodings.xml
 android/android-databinding/.idea/
 android/dummy/.idea/
+android/android-alura-viagens/.idea/
