--- a/android/dagger-hilt/app/build.gradle
+++ b/android/dagger-hilt/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
+    implementation project(path: ':public')
 
     kapt "com.google.dagger:hilt-android-compiler:2.40.5"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
