--- a/react-native/max-app/app.json
+++ b/react-native/max-app/app.json
@@ -3,7 +3,7 @@
     "name": "max-app",
     "slug": "max-app",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "backgroundColor": "#ffffff",
     "userInterfaceStyle": "light",
